used class instead of struct to model the API call, fixed the problem where no JSON data was being passing in

--- a/WeatherApp/WeatherApp/View/Base.lproj/Main.storyboard
+++ b/WeatherApp/WeatherApp/View/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Weather View Controller-->
         <scene sceneID="C0C-rK-5mS">
             <objects>
-                <viewController id="ATK-xy-xWZ" customClass="WeatherViewController" customModule="Clima" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ATK-xy-xWZ" customClass="WeatherViewController" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="e2Q-lo-YXH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
